-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 16
-
Component/s: infrastructure
-
b04
Currently hotspot/share/utilities/globalDefinitions_visCPP.hpp contains a lot of #pragma warning( disable : ...).
All these globally disabled warnings should move to the make files instead.
All these globally disabled warnings should move to the make files instead.