8248548: Use DISABLED_WARNINGS for globally disabled warnings on Visual Studio in Hotspot

Reviewed-by: kbarrett, erikj